--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h1>Simple Website</h1>
+        <img src="images/ALEX MCG LOGO.svg" alt="" >
       </div>
       <ul class="nav-links">
         <li><a href="https://www.youtube.com/">Home</a></li>
